--- a/src/home.css
+++ b/src/home.css
@@ -34,6 +34,7 @@
     flex-direction: column;
     text-align: center;
     margin-bottom: 50px;
+    color: black;
 }
 
 .home-accommodations > h2 {
